# Peyot-TIN

./: CMakeLists.txt  README.md
client/: Client.cpp  Client.h  main.cpp
client/UI/: UI.cpp  UI.h
communication/: Receiver.cpp  Receiver.h  Sender.cpp  Sender.h
parser/: BookRequest.cpp  BookRequest.h  CheckInstructorsRequest.cpp  CheckInstructorsRequest.h  CheckMyTerminsRequest.cpp  CheckMyTerminsRequest.h  CheckTerminsByInstructorRequest.cpp  CheckTerminsByInstructorRequest.h  LoginRequest.cpp  LoginRequest.h  ModifyRequest.cpp  ModifyRequest.h  Parser.cpp  Parser.h  QuitRequest.cpp  QuitRequest.h  RegisterRequest.cpp  RegisterRequest.h  Request.cpp  Request.h  RequestType.h  ResignRequest.cpp  ResignRequest.h  Response.cpp  Response.h  SetScheduleRequest.cpp  SetScheduleRequest.h
server/: ConnectionHandler.cpp  ConnectionHandler.h  Executor.cpp  Executor.h  LoggedUser.h  Server.cpp  Server.h  main.cpp
server/database/: DBManager.cpp  DBManager.h  DBScheduleManager.cpp  DBScheduleManager.h  Date.cpp  Date.h  User.cpp  User.h  clients  employees  schedule
server/eventLog/: ELManager.cpp  ELManager.h  logs
server/security/: SecurityManager.cpp  SecurityManager.h
structures/: Date.cpp  Date.h  User.cpp  User.h
tests/: DatabaseTests.cpp  ParserTests.cpp  ScheduleDatabaseTests.cpp  SecurityTests.cpp  UsersDatabaseTests.cpp  clients  employees  test_schedule
